--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
             <li>Python</li>
             <li>Java</li>
             <li>Html</li>
-            <li>Portugol</li>
+            <li>Banco de Dados</li>
         </ul>
         <h3>Cursos/Formações</h3>
         <ul>
@@ -23,7 +23,10 @@
             <li>Ensino Médio Finalizando</li>
             <li>Técnico em Informática</li>
         </ul>
-        
+        <footer>
+            <b>Meus contatos:</b> email:
+            matheusevaristo161@gmail.com telefone: (89) 99000000
+        </footer>
     </body>
        
 
