--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,12 @@
 <html>
-    <head> </head>
+    <head>
+        <link href="estilo.css" rel="stylesheet"/>
+     </head>
 
     <body>
         <img src="aqui.jpeg">
         <h1>Matheus Evaristo Araújo</h1>
-        <p>Olá, Eu sou Matheus Evaristo, tenho 17 anos, sou aluno do IFPI</p>
+        <p>Olá, Eu sou Matheus Evaristo, tenho 17 anos, sou aluno do IFPI.</p>
         <h3>Experiências Profissionais: </h3>
         <ul>
             <li>C++</li>
